[package]

name = "rust-lightsout"
version = "0.0.0"
readme = "README.md"
authors = ["Marek Baczynski <imbaczek@gmail.com>"]
tags = []

[[bin]]

name = "rust-lightsout"
path = "src/main.rs"

[dependencies.graphics]

git = "https://github.com/pistondevelopers/rust-graphics"

[dependencies.piston]

git = "https://github.com/pistondevelopers/piston/"

[dependencies.sdl2_game_window]

git = "https://github.com/pistondevelopers/sdl2_game_window"

[dependencies.opengl_graphics]

git = "https://github.com/pistondevelopers/opengl_graphics"
