[package]

name = "rust-lightsout"
version = "0.0.2"
readme = "README.md"
authors = ["Marek Baczynski <imbaczek@gmail.com>"]

[[bin]]

name = "rust-lightsout"
path = "src/main.rs"

[dependencies]
piston = "0.32"
piston_window = "0.66.0"
pistoncore-sdl2_window = "0.43.0"
gfx = "0.15.1"
gfx_core = "*"
gfx_device_gl = "0.14.0"
image = "0.13.0"
piston2d-graphics = "0.21"
piston2d-opengl_graphics= "0.43.0"
piston2d-gfx_graphics = "0.40.0"
piston-music = "0.21.0"
sdl2 = "0.30.0"
